[package]
name = "benq-control"
version = "0.1.0"
authors = ["Tim Buckley <timothyb89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# base requirements
serialport = { version = "4.0", default-features = false }
bytes = "0.5"
log = "0.4"
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.2", features = ["full"] }

# requirements for all bins
color-eyre = { version = "0.5", optional = true, default-features = false, features = ["track-caller"] }
env_logger = { version = "0.7", optional = true }
structopt = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true}
serde_json = { version = "1.0", optional = true }

# requirements for control server / exporter
warp = { version = "0.3", optional = true }
simple-prometheus-exporter = { git = "https://github.com/timothyb89/simple-prometheus-exporter-rs", tag = "v0.1.0", optional = true }

[features]
default = []

bin = ["env_logger", "color-eyre", "structopt", "serde", "serde_json"]
daemon = ["warp", "simple-prometheus-exporter"]

[[bin]]
name = "projectord"
path = "src/bin/projector_daemon.rs"
required-features = ["bin", "daemon"]

[[bin]]
name = "projector-tool"
path = "src/bin/projector_tool.rs"
required-features = ["bin"]

